Bug 512039 - Bluetooth "Pair device" button does not start the pairing wizard in plasma-settings, but the wizard works in systemsettings
Summary: Bluetooth "Pair device" button does not start the pairing wizard in plasma-se...
Status: RESOLVED FIXED
Alias: None
Product: plasma-mobile-settings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Devin Lin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-13 17:01 UTC by Marco Mattiolo
Modified: 2025-12-02 04:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video showing the "Pair device" button doing nothing under plasma-settings but working in systemsettings (2.18 MB, video/webm)
2025-11-13 17:01 UTC, Marco Mattiolo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Mattiolo 2025-11-13 17:01:51 UTC
Created attachment 186750 [details]
video showing the "Pair device" button doing nothing under plasma-settings but working in systemsettings

SUMMARY
Hi, I noticed the "Pair device" button doesn't work in plasma-settings. I was able to pair BT devices in the past, then I thought blaming some recent Qt/KF upgrade, like Bluedevil. But I noticed that the "Pair device" button triggers correctly the pairing wizard in systemsettings, like shown in the attached video.
Then, whatever is the (Bluedevil?) upgrade triggering this issue, it seems to have broken the pairing button functionality only in plasma-settings.
Video refers to plasma-settings 25.07.0 (now in Debian testing), but I've checked the issue exists also in plasma-settings 25.11.0 (pmOS).
Tried launching plasma-settings from the CLI, but no useful information is logged when tapping the "Pair device" button. Even installing debug symbols and launching plasma-settings within gdb showed anything strange or broken.


SOFTWARE/OS VERSIONS
Linux: 6.16-sdm845
KDE Plasma Version: 6.5.2
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Comment 2 Devin Lin 2025-12-01 17:39:41 UTC
Git commit 1626baaf418241e48c58b3f8fa3b2f40b165881d by Devin Lin.
Committed on 01/12/2025 at 17:34.
Pushed by devinlin into branch 'master'.

kcm: Fix pair window not opening in plasma-settings

https://invent.kde.org/plasma/bluedevil/-/merge_requests/162 introduced
window parenting for the pair dialog. However,
QQuickRenderControl::renderWindowFor seems to return nullptr for full Qt
Quick apps like plasma-settings, causing the pair window to not open.
Use the window directly in this case.

M  +6    -0    src/kcm/bluetooth.cpp

https://invent.kde.org/plasma/bluedevil/-/commit/1626baaf418241e48c58b3f8fa3b2f40b165881d
Comment 3 Devin Lin 2025-12-02 04:25:48 UTC
Git commit 29c694d727cdb68e93828655693ad7286356a143 by Devin Lin.
Committed on 02/12/2025 at 04:25.
Pushed by devinlin into branch 'Plasma/6.5'.

kcm: Fix pair window not opening in plasma-settings

https://invent.kde.org/plasma/bluedevil/-/merge_requests/162 introduced
window parenting for the pair dialog. However,
QQuickRenderControl::renderWindowFor seems to return nullptr for full Qt
Quick apps like plasma-settings, causing the pair window to not open.
Use the window directly in this case.

M  +6    -0    src/kcm/bluetooth.cpp

https://invent.kde.org/plasma/bluedevil/-/commit/29c694d727cdb68e93828655693ad7286356a143