kcm: Fix pair window not opening in plasma-settings

BUG: 512039

https://invent.kde.org/plasma/bluedevil/-/merge_requests/162 introduced
window parenting for the pair dialog. However,
QQuickRenderControl::renderWindowFor seems to return nullptr for full Qt
Quick apps like plasma-settings, causing the pair window to not open.
Use the window directly in this case.